Feito alterações OK

--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="theme-color" content="#2c6e49">
-    <title>Inventário TI PWA</title>
+    <title>Inventário TI - Prefeitura</title>
     <link rel="icon" type="image/png" href="https://img.icons8.com/plasticine/100/box--v1.png">
     <link rel="manifest" href="manifest.json">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
@@ -23,7 +23,12 @@
         </div>
         <div class="footer">
             <p>&copy; 2025 Victor Gustavo Santin</p>
-            <a href="https://wa.me/54981661623" target="_blank" rel="noopener noreferrer" class="whatsapp-icon"><i class="fa-brands fa-whatsapp"></i></a>
+            <div class="social-icons">
+                <a href="https://github.com/VictorNere" target="_blank"><i class="fa-brands fa-github"></i></a>
+                <a href="https://www.instagram.com/vgs_informatica_/" target="_blank"><i class="fa-brands fa-instagram"></i></a>
+                <a href="https://www.linkedin.com/in/victorgustavosantin/" target="_blank"><i class="fa-brands fa-linkedin"></i></a>
+                <a href="https://wa.me/54981661623" target="_blank" class="whatsapp-icon"><i class="fa-brands fa-whatsapp"></i></a>
+            </div>
         </div>
     </div>
 
@@ -37,29 +42,14 @@
             <div class="form-group">
                 <label>Categoria</label>
                 <select name="categoria" required>
-                    <option value="HDD">HDD</option>
-                    <option value="Memória RAM NB">Memória RAM NB</option>
-                    <option value="Memória RAM PC">Memória RAM PC</option>
-                    <option value="Placa Vídeo / GPU">Placa Vídeo / GPU</option>
-                    <option value="SSD M2">SSD M2</option>
-                    <option value="SSD Sata">SSD Sata</option>
-                    <option value="Processador">Processador</option>
-                    <option value="Placa Mãe">Placa Mãe</option>
-                    <option value="Telefonia Móvel">Telefonia Móvel</option>
-                    <option value="Equipamento Completo">Equipamento Completo</option>
-                    <option value="Infraestrutura">Infraestrutura</option>
-                    <option value="Fonte / PSU">Fonte / PSU</option>
-                    <option value="Periférico">Periférico</option>
-                    <option value="Telefonia">Telefonia</option>
-                    <option value="Suprimento">Suprimento</option>
-                    <option value="Outros">Outros</option>
+                    <option value="HDD">HDD</option><option value="Memória RAM NB">Memória RAM NB</option><option value="Memória RAM PC">Memória RAM PC</option><option value="Placa Vídeo / GPU">Placa Vídeo / GPU</option><option value="SSD M2">SSD M2</option><option value="SSD Sata">SSD Sata</option><option value="Processador">Processador</option><option value="Placa Mãe">Placa Mãe</option><option value="Telefonia Móvel">Telefonia Móvel</option><option value="Equipamento Completo">Equipamento Completo</option><option value="Infraestrutura">Infraestrutura</option><option value="Fonte / PSU">Fonte / PSU</option><option value="Periférico">Periférico</option><option value="Telefonia">Telefonia</option><option value="Suprimento">Suprimento</option><option value="Outros">Outros</option>
                 </select>
             </div>
-            <div class="form-group"><label>Identificação</label><input type="text" name="identificacao" required placeholder="Digite o nome do item..."></div>
+            <div class="form-group"><label>Identificação</label><input type="text" name="identificacao" required placeholder="Nome do item..."></div>
             <div class="form-group"><label>Quantidade</label><input type="number" name="quantidade" value="1" min="1" required id="input-qtd"></div>
             <div class="form-group checkbox-container"><label class="styled-checkbox"><input type="checkbox" id="check-patrimonio"> <span>Há Patrimônio?</span></label></div>
-            <div id="pat-input-container" class="form-group" style="display:none;"><label>Número do Patrimônio</label><input type="text" id="patrimonio-numero" placeholder="Digite o número do patrimônio..."></div>
-            <div class="form-group"><label>Observação</label><textarea name="observacao" placeholder="Alguma observação importante?"></textarea></div>
+            <div id="pat-input-container" class="form-group" style="display:none;"><label>Número do Patrimônio</label><input type="text" id="patrimonio-numero" placeholder="Digite o patrimônio..."></div>
+            <div class="form-group"><label>Observação</label><textarea name="observacao" placeholder="Notas sobre a entrada..."></textarea></div>
             <div class="center-btn"><button type="submit" class="submit-btn" id="btn-salvar">Salvar Item</button></div>
         </form>
     </template>
@@ -67,9 +57,10 @@
     <template id="template-estoque">
         <div class="modal-header"><h2>Estoque</h2><button class="close-button" onclick="closeModal()">×</button></div>
         <div class="filters-grid">
-            <input type="text" id="f-est-nome" placeholder="Nome ou Patrimônio..." onkeyup="filterEstoque()">
+            <input type="text" id="f-est-nome" placeholder="Nome..." onkeyup="filterEstoque()">
+            <input type="text" id="f-est-pat" placeholder="Patrimônio..." onkeyup="filterEstoque()">
             <select id="f-est-cat" onchange="filterEstoque()">
-                <option value="">Todas Categorias</option>
+                <option value="">Categorias</option>
                 <option value="HDD">HDD</option><option value="Memória RAM NB">Memória RAM NB</option><option value="Memória RAM PC">Memória RAM PC</option><option value="Placa Vídeo / GPU">Placa Vídeo / GPU</option><option value="SSD M2">SSD M2</option><option value="SSD Sata">SSD Sata</option><option value="Processador">Processador</option><option value="Placa Mãe">Placa Mãe</option><option value="Telefonia Móvel">Telefonia Móvel</option><option value="Equipamento Completo">Equipamento Completo</option><option value="Infraestrutura">Infraestrutura</option><option value="Fonte / PSU">Fonte / PSU</option><option value="Periférico">Periférico</option><option value="Telefonia">Telefonia</option><option value="Suprimento">Suprimento</option><option value="Outros">Outros</option>
             </select>
         </div>
@@ -81,6 +72,32 @@
         </div>
     </template>
 
+    <template id="template-observacao">
+        <div class="modal-header"><h2>Observação do Item</h2><button class="close-button" onclick="closeModal()">×</button></div>
+        <div class="obs-container"><p id="texto-observacao"></p></div>
+        <div class="center-btn"><button class="submit-btn" onclick="closeModal()">Fechar</button></div>
+    </template>
+
+    <template id="template-excluir">
+        <div class="modal-header"><h2>Excluir Item</h2><button class="close-button" onclick="closeModal()">×</button></div>
+        <form id="form-excluir-item">
+            <div class="form-group"><label>Item</label><input type="text" id="excluir-nome" disabled></div>
+            <div class="form-group"><label>Quantidade a Excluir (Máx: <span id="max-excluir"></span>)</label><input type="number" id="excluir-qtd" min="1" required></div>
+            <div class="center-btn"><button type="submit" class="submit-btn danger" id="btn-confirmar-exclusao">Confirmar Exclusão</button></div>
+        </form>
+    </template>
+
+    <template id="template-retirar">
+        <div class="modal-header"><h2>Retirada</h2><button class="close-button" onclick="closeModal()">×</button></div>
+        <form id="form-retirar-item">
+            <div class="form-group"><label>Item</label><input type="text" id="retirar-nome" disabled></div>
+            <div class="form-group"><label>Quantidade (Máx: <span id="max-retirar"></span>)</label><input type="number" id="retirar-qtd" min="1" required></div>
+            <div class="form-group"><label>Destino</label><input type="text" id="retirar-destino" required placeholder="Para onde vai?"></div>
+            <div class="form-group"><label>Data e Hora</label><input type="datetime-local" id="retirar-data" required></div>
+            <div class="center-btn"><button type="submit" class="submit-btn danger" id="btn-confirmar-retirada">Confirmar Saída</button></div>
+        </form>
+    </template>
+
     <template id="template-relatorio">
         <div class="modal-header"><h2>Relatório</h2><button class="close-button" onclick="closeModal()">×</button></div>
         <div class="filters-grid-rel">
@@ -90,6 +107,7 @@
                 <option value="">Ações</option>
                 <option value="adicao">Adicionado</option>
                 <option value="retirada">Retirado</option>
+                <option value="exclusao">Excluído</option>
             </select>
             <input type="date" id="f-rel-data-i" onchange="filterRelatorio()">
             <input type="date" id="f-rel-data-f" onchange="filterRelatorio()">
@@ -107,22 +125,11 @@
     </template>
 
     <template id="template-editar">
-        <div class="modal-header"><h2>Editar Item</h2><button class="close-button" onclick="closeModal()">×</button></div>
+        <div class="modal-header"><h2>Editar</h2><button class="close-button" onclick="closeModal()">×</button></div>
         <form id="form-editar-item">
             <div class="form-group"><label>Categoria</label><select name="categoria" id="edit-categoria"></select></div>
             <div class="form-group"><label>Identificação</label><input type="text" name="identificacao" id="edit-identificacao" required></div>
             <div class="center-btn"><button type="submit" class="submit-btn" id="btn-editar-salvar">Atualizar</button></div>
-        </form>
-    </template>
-
-    <template id="template-retirar">
-        <div class="modal-header"><h2>Retirada</h2><button class="close-button" onclick="closeModal()">×</button></div>
-        <form id="form-retirar-item">
-            <div class="form-group"><label>Item</label><input type="text" id="retirar-nome" disabled></div>
-            <div class="form-group"><label>Quantidade (Máx: <span id="max-retirar"></span>)</label><input type="number" id="retirar-qtd" min="1" required></div>
-            <div class="form-group"><label>Destino</label><input type="text" id="retirar-destino" required placeholder="Para onde vai?"></div>
-            <div class="form-group"><label>Data e Hora</label><input type="datetime-local" id="retirar-data" required></div>
-            <div class="center-btn"><button type="submit" class="submit-btn danger" id="btn-confirmar-retirada">Confirmar Saída</button></div>
         </form>
     </template>
 
@@ -135,7 +142,7 @@
 
     <template id="template-dashboard">
         <div class="modal-header"><h2>Dashboard</h2><button class="close-button" onclick="closeModal()">×</button></div>
-        <div class="chart-container"><canvas id="main-chart-canvas"></canvas></div>
+        <div id="dashboard-content"><canvas id="main-chart-canvas"></canvas></div>
     </template>
 
     <script src="script.js"></script>
